Update main.tex with chem packages

--- a/latex/report/main.tex
+++ b/latex/report/main.tex
@@ -6,6 +6,14 @@
 \usepackage{graphicx}
 \graphicspath{ {./pics/} }
 
+\usepackage{ghsystem}
+\usepackage{chemfig}
+\usepackage{chemgreek}
+
+\usepackage{mathtools}
+\usepackage{amsmath}
+\numberwithin{equation}{section}
+
 \usepackage{xcolor}
 \usepackage{listings}
 \lstset{
