folders and fixed inputs

--- a/latex/report/main.tex
+++ b/latex/report/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 
 \usepackage[sorting=none]{biblatex}
-\addbibresource{bib.bib}
+\addbibresource{contents/bib.bib}
 
 \usepackage{graphicx}
 \graphicspath{ {./pics/} }
@@ -81,9 +81,9 @@
 \date{\today}
 \begin{document}
 
-\input{title.tex}
+\input{contents/title.tex}
 
-\input{abstract.tex}
+\input{contents/abstract.tex}
 % What you did, what you found and it's importance (about 200 words)
 % One or two sentences per section.
 
@@ -108,7 +108,7 @@
 
 
 \section{Introduction} \label{sec:intro}
-\input{intro.tex}
+\input{contents/intro.tex}
 % Introduction - three paragraph strategy
 % 	• set stage on current state of the art = broad context
 % 	• problem statement / research question and hypothesis
@@ -140,7 +140,7 @@
 % \end{table}
 
 \section{Methods} \label{sec:methods}
-\input{methods.tex}
+\input{contents/methods.tex}
 % Methods: \\
 % all details necessary to recreate your experiment \\
 % – be concise and “dry”/ matter of factly
@@ -152,14 +152,14 @@
 % (extra material can go into appendix or supplementary material)
 
 \section{Results} \label{sec:results}
-\input{results.tex}
+\input{contents/results.tex}
 % Results: what you found\\
 % • keep it “dry”, just the facts, minimal analysis\\
 % • state statistical information, like name of test used, test values, p-value, and confidence intervals
 
 
 \section{Discussion} \label{sec:discussion}
-\input{discussion.tex}
+\input{contents/discussion.tex}
 % Discussion: how you interpret the results\\
 % • simplify and pick out characteristic features from results that support your story\\
 % • defend results against arguments that go against your story (stay professional)\\
@@ -168,10 +168,10 @@
 
 
 \section{Conclusion} \label{sec:conclusion}
-\input{conclusion.tex}
+\input{contents/conclusion.tex}
 
 \section{Acknowledgements} \label{sec:acknowledgements}
-\input{acknowledgements.tex}
+\input{contents/acknowledgements.tex}
 % who helped?
 
 \thispagestyle{empty}
