--- a/latex/report/main.tex
+++ b/latex/report/main.tex
@@ -77,7 +77,7 @@
 
 % Opening
 \title{Report Title}
-\author{David Parker}
+\author{}
 \date{\today}
 \begin{document}
 
@@ -91,7 +91,7 @@
 \tableofcontents{}
 \pagebreak
 
-% A few useful suggestions for writing clear scientific documents from Amedeo Caflisch
+% A few useful suggestions for writing clear scientific documents from a prof. at UZH
 % 0.  Avoid subjective or qualitative statements, e.g.,   "The protonation state of the tertiary amino of compounds mm-nn is probably charged."    or
 % "Compound mm is expected to be more potent than compound nn because it better fits in the pocket according to visual analysis."
 % try to structure each (sub)section by decomposing it into paragraphs. The initial sentence of each new paragraph should start with a tab, as in most printed papers.
